# aria

./: .codeaudit.suppress  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  API_SPECIFICATIONS.md  ARIA.md  ARIA_PERSONALITY_MERGE.md  BUILD_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.gpu  ENHANCEMENT_SUCCESS.md  IMPROVEMENTS_2026.md  IMPROVEMENTS_COMPLETE_2026.md  INSTALL.md  INSTALLATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LEGAL.md  LICENSE  LORA_GUIDE.md  MANUAL_SETUP_REQUIRED.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START_2026.md  RAILWAY_DEPLOY.md  README.md  README_IMPLEMENTATION.md  READY_TO_USE.md  ROADMAP.md  SCRIPTS.md  SETUP.md  SETUP_COMPLETE.md  STATUS.md  SUMMARY.md  TEST_REPORT.md  (+17 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/instructions/: codacy.instructions.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.history/: .pre-commit-config_20260109103836.yaml  ARCHITECTURE_20260108084902.md  COMPLIANCE_20260108090227.md  CONTRIBUTING_20260108084539.md  FINAL_REVIEW_20260108090443.md  IMPROVEMENTS_20260108085043.md  QUICKSTART_NEW_20260109103331.md  README_20260108084849.md  README_20260108085156.md  ROADMAP_20260108084849.md  TESTING_20260108084339.md  pyproject_20260109102503.toml  pyproject_20260109102530.toml  pyproject_20260109103210.toml  requirements_20260108084625.txt  requirements_20260109092008.txt  requirements_20260109103447.txt
.history/config/: config_20260109094032.yaml  config_20260109094556.yaml  config_20260109101015.yaml  config_20260109101022.yaml  config_20260109101728.yaml
.history/scripts/: test_generation_20260109100915.py
.qlty/: qlty.toml
.serena/: project.yml
alembic/: README  env.py
alembic/versions/: 20260202_0733_add_community_gallery_tables.py
api/: index.py  index_fastapi_backup.py  test.py
config/: config.example.yaml  style_presets.json
config/wildcards/: composition.txt  face_quality.txt  lighting.txt  quality.txt  styles.txt
data/: aria_enhanced_memory.json  aria_memory.json
datasets/: licenses.txt
docs/: ADVANCED_PROMPTS.md  API.md  ARCHITECTURE.md  ARIA_ENHANCEMENT_PLAN_2026.md  BIAS_MITIGATION.md  DATABASE.md  DEPLOYMENT.md  EXTERNAL_TOOLS_EVALUATION.md  IMPROVEMENTS.md  IMPROVEMENT_RECOMMENDATIONS_2026.md  INSPIRATION_MODES.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE5_FINAL_IMPLEMENTATION.md  RAILWAY_ADMIN_SETUP.md  ROADMAP.md  SECURITY.md  SECURITY_ANALYSIS.md  TESTING.md  TEST_RESULTS.md  TRAINING_DATA_SOURCING.md  WEBSOCKET.md  WEB_GALLERY.md
docs/archive/: CLEANUP_NOTES.md  DOCUMENTATION_CLEANUP_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  LORA_QUICKSTART.md  LORA_SYSTEM_SUMMARY.md  LORA_TRAINING.md  NEXT_STEPS.md
scripts/: aria_insights.py  check_aria.py  cleanup_duplicates.py  cleanup_gallery.py  deploy_to_vercel.sh  download_specialized_datasets.py  download_training_data.py  generate.py  generate_artistic_collection.py  generate_artistic_collection_2.py  generate_collection.py  generate_expanded_collection.py  generate_ultimate_collection.py  install.sh  manage_loras.py  optimize_gallery_for_web.py  retry_failed_uploads.py  setup_project.sh  test_generation.py  train_all_loras.py  upload_missing.py  upload_to_railway.py
scripts/legacy/: generate_artistic_collection.py  generate_artistic_collection_2.py  generate_artwork.py  generate_batch.py  generate_creative_collection.py  generate_diverse_collection.py  generate_expanded_collection.py  generate_random.py  generate_ultimate_collection.py  quick_generate.py
src/ai_artist/: __init__.py  __main__.py  main.py
static/: manifest.json  offline.html  service-worker.js
templates/admin/: dashboard.html
tests/: generate_test_report.py  test_api_endpoints.py  test_critic.py  test_integration_final.py  test_manual.py  test_prompt_engine_integration.py  test_prompt_utilities.py  test_smoke.py
tests/integration/: test_controlnet.py  test_creation_flow.py  test_queue.py  test_workflow.py
tests/unit/: test_aria_routes.py  test_cognition.py  test_critic_expanded.py  test_curator.py  test_database.py  test_flux_generator.py  test_gallery.py  test_generator.py  test_ip_adapter.py  test_main.py  test_memory_expanded.py  test_moods.py  test_scheduler.py  test_unsplash.py  test_web_api.py  test_web_helpers.py  test_websocket.py
thoughts/handoffs/: 2026-01-30-improvements.md  (+1 more)
(+112 files in other folders)
